[package]
authors = ["吴双 <dualwu_tech@outlook.com>"]
edition = "2018"
name = "easy-fs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.1"
bitflags = "1.2.1"
log = "0.4.14"
