[package]
authors = ["dualwu <dualwu_tech@outlook.com>"]
edition = "2018"
name = "os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
log = "0.4.14"
riscv = {git = "https://github.com/rcore-os/riscv", features = ["inline-asm"]}
spin = "0.9.1"
virtio-drivers = {git = "https://github.com/rcore-os/virtio-drivers"}
xmas-elf = "0.7.0"

easy-fs = {path = "../easy-fs"}
